--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/VTMDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/VTMDataTemplate.xaml
@@ -73,6 +73,6 @@
     <Label Grid.Column="0" Grid.Row="8" Content="{x:Static res:Resources.Count}" />
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="8" Value="{Binding Count }" />
     <Label Grid.Column="2" Grid.Row="8" Content="{x:Static res:Resources.MaxVtm_V}" />
-    <customControls:NumericUpDown Grid.Column="3" Grid.Row="8" Value="{Binding VTM }" />
+    <customControls:NumericUpDown Grid.Column="3" Grid.Row="8" Value="{Binding VTM }" StringFormat="{}{0:N2}" />
     
 </Grid>
