--- a/SCME.WpfControlLibrary/Styles/ListViewItemTestParameter.xaml
+++ b/SCME.WpfControlLibrary/Styles/ListViewItemTestParameter.xaml
@@ -25,17 +25,38 @@
                                 <ColumnDefinition Width="auto" SharedSizeGroup="Column2" />
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
+                            <Border Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="4" Grid.RowSpan="2" BorderThickness="1" Background="{StaticResource PurpleBrush2}" BorderBrush="AliceBlue"/>
+
                             <Label Grid.Column="0" Grid.Row="0" Content="{Binding Converter={StaticResource TP2S}}" />
                             <CheckBox Grid.Column="2" Grid.Row="0" IsChecked="{Binding IsEnabled}" Content="{x:Static res:Resources.IsActive}" d:DataContext="{d:DesignInstance baseTestParametersAndNormatives:BaseTestParametersAndNormatives }" />
-                            <Button Grid.Column="3" Grid.Row="0" Style="{StaticResource ButtonWithIcon}" HorizontalAlignment="Right" 
-                                    Visibility="{Binding Path=ContentIsEnabled, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=profilesPageComponents:ListViewTestParametersUserControl}, Converter={StaticResource B2V}}"
-                                    Command="{Binding  RelativeSource ={RelativeSource Mode=FindAncestor, AncestorType=profilesPageComponents:ListViewTestParametersUserControl}, Path=DeleteRelayCommand}"
-                                    CommandParameter="{Binding RelativeSource={RelativeSource Self}, Path=DataContext}">
-                                <iconPacks:PackIconMaterial Kind="Delete" />
-                            </Button>
+                            <StackPanel Grid.Column="3" Grid.Row="0" Orientation="Horizontal">
+                            
+                                <Button Style="{StaticResource ButtonWithIcon}" 
+                                        Visibility="{Binding Path=ContentIsEnabled, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=profilesPageComponents:ListViewTestParametersUserControl}, Converter={StaticResource B2V}}"
+                                        Command="{Binding  RelativeSource ={RelativeSource Mode=FindAncestor, AncestorType=profilesPageComponents:ListViewTestParametersUserControl}, Path=MoveUp}"
+                                        CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListViewItem}, Path=DataContext}">
+                                    <iconPacks:PackIconMaterial Kind="ArrowUp" />
+                                </Button>
+                                <Button Style="{StaticResource ButtonWithIcon}" 
+                                        Visibility="{Binding Path=ContentIsEnabled, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=profilesPageComponents:ListViewTestParametersUserControl}, Converter={StaticResource B2V}}"
+                                        Command="{Binding  RelativeSource ={RelativeSource Mode=FindAncestor, AncestorType=profilesPageComponents:ListViewTestParametersUserControl}, Path=MoveDown}"
+                                        CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListViewItem}, Path=DataContext}">
+                                    <iconPacks:PackIconMaterial Kind="ArrowDown" />
+                                </Button>
+                                
+                                <Button Style="{StaticResource ButtonWithIcon}" HorizontalAlignment="Right" 
+                                        Visibility="{Binding Path=ContentIsEnabled, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=profilesPageComponents:ListViewTestParametersUserControl}, Converter={StaticResource B2V}}"
+                                        Command="{Binding  RelativeSource ={RelativeSource Mode=FindAncestor, AncestorType=profilesPageComponents:ListViewTestParametersUserControl}, Path=DeleteRelayCommand}"
+                                        CommandParameter="{Binding RelativeSource={RelativeSource Self}, Path=DataContext}">
+                                    <iconPacks:PackIconMaterial Kind="Delete" />
+                                </Button>
+                            </StackPanel>
+                            
+                            
+                            
+                            
                             <ContentPresenter Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="4" Margin="10" DataContext="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListViewItem}, Path=DataContext}" />
 
-                            <Border Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="4" Grid.RowSpan="2" BorderThickness="1" BorderBrush="AliceBlue"/>
                         </Grid>
                 </ControlTemplate>
             </Setter.Value>
