--- a/FastTest/App.xaml
+++ b/FastTest/App.xaml
@@ -4,6 +4,12 @@
              xmlns:local="clr-namespace:FastTest"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-        <ResourceDictionary Source="pack://application:,,,/SCME.WpfControlLibrary;component/Styles/Controls.xaml"/>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+          
+                
+                <ResourceDictionary Source="pack://application:,,,/SCME.WpfControlLibrary;component/Styles/Controls.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
