--- a/FastTest/MainWindow.xaml
+++ b/FastTest/MainWindow.xaml
@@ -4,9 +4,11 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FastTest"
+        xmlns:customControls="WpfControlLibrary"
         mc:Ignorable="d" Loaded="Window_Loaded"
         Title="MainWindow" Height="1280" Width="1024">
-    <Grid>
-        
-    </Grid>
+ 
+    <StackPanel>
+        <customControls:NumericUpDown />
+    </StackPanel>
 </Window>
