--- a/SCME.ProfileBuilder/MainWindow.xaml
+++ b/SCME.ProfileBuilder/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<ControlsEx:MetroWindow x:Class="SCME.ProfileBuilder.MainWindow"
+﻿<Window x:Class="SCME.ProfileBuilder.MainWindow"
         xmlns:ControlsEx="http://metro.mahapps.com/winfx/xaml/controls"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -11,4 +11,4 @@
         WindowStartupLocation="CenterScreen" 
          WindowState="Normal" Icon="App.ico" >
             <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden" />
-</ControlsEx:MetroWindow>
+</Window>
