--- a/SCME.UI/CustomControl/ListViewTestParametersSelection.xaml
+++ b/SCME.UI/CustomControl/ListViewTestParametersSelection.xaml
@@ -723,6 +723,7 @@
                                 <RowDefinition Height="*" />
                                 <RowDefinition Height="*" />
                                 <RowDefinition Height="*" />
+                                <RowDefinition Height="*" />
                             </Grid.RowDefinitions>
 
                             <Label Grid.Column="0" Grid.Row="0" Margin="0,0,0,0" Content="{x:Static res:Resources.AtuPrePulseValue}" />
@@ -730,6 +731,12 @@
 
                             <Label Grid.Column="0" Grid.Row="1" Margin="0,0,0,0" Content="{x:Static res:Resources.AtuPowerValueSet}" />
                             <Label Grid.Column="1" Grid.Row="1" HorizontalAlignment="Right" Content="{Binding PowerValue}" />
+
+                            <Label Grid.Column="0" Grid.Row="2" Margin="0,0,0,0" Content="{x:Static res:Resources.PRSM_Min}" />
+                            <Label Grid.Column="2" Grid.Row="2" HorizontalAlignment="Right" Content="{Binding PRSM_Min }" />
+                                
+                            <Label Grid.Column="0" Grid.Row="3" Margin="0,0,0,0" Content="{x:Static res:Resources.PRSM_Max}" />
+                            <Label Grid.Column="2" Grid.Row="3" HorizontalAlignment="Right" Content="{Binding PRSM_Max }" />
                         </Grid>
                     </Grid>
                 </Grid>
