--- a/SCME.UI/PagesTech/ProfilePage.xaml
+++ b/SCME.UI/PagesTech/ProfilePage.xaml
@@ -823,6 +823,18 @@
                                                 TextBlock.TextAlignment="Right" Minimum="2" Maximum="30"
                                                 IsFloat="True"
                                                 Text="{Binding SelectedItem.PowerValue, ElementName=TestParameters, UpdateSourceTrigger=PropertyChanged}" />
+                    
+                    <Label Grid.Column="1" Grid.Row="3" Margin="10" HorizontalAlignment="Left" Content="{x:Static res:Resources.PRSM_Min}" />
+                    <customControl:ValidatingTextBox Grid.Column="2" Grid.Row="3" Padding="5" Margin="10"
+                                                     TextBlock.TextAlignment="Right" Minimum="2" Maximum="30"
+                                                     IsFloat="True"
+                                                     Text="{Binding SelectedItem.PRSM_Min, ElementName=TestParameters, UpdateSourceTrigger=PropertyChanged}" />
+                    
+                    <Label Grid.Column="1" Grid.Row="4" Margin="10" HorizontalAlignment="Left" Content="{x:Static res:Resources.PRSM_Max}" />
+                    <customControl:ValidatingTextBox Grid.Column="2" Grid.Row="4" Padding="5" Margin="10"
+                                                     TextBlock.TextAlignment="Right" Minimum="2" Maximum="30"
+                                                     IsFloat="True"
+                                                     Text="{Binding SelectedItem.PRSM_Max, ElementName=TestParameters, UpdateSourceTrigger=PropertyChanged}" />
 
                 </Grid>
             </TabItem>
