--- a/SCME.WpfControlLibrary/Styles/NumericUpDown.xaml
+++ b/SCME.WpfControlLibrary/Styles/NumericUpDown.xaml
@@ -89,7 +89,7 @@
                                           Width="{DynamicResource SCME.PathUpDownWidth}"
                                           Height="{DynamicResource SCME.PathUpDownWidth}"
                                           Data="F1 M 35,19L 41,19L 41,35L 57,35L 57,41L 41,41L 41,57L 35,57L 35,41L 19,41L 19,35L 35,35L 35,19 Z "
-                                          Fill="{DynamicResource GrayBrush1}"
+                                          Fill="Black"
                                           Stretch="Fill" />
                                 </RepeatButton>
                                 <RepeatButton x:Name="PART_NumericDown"
@@ -103,7 +103,7 @@
                                           Width="{DynamicResource SCME.PathUpDownWidth}"
                                           Height="{DynamicResource SCME.PathDownHeight}"
                                           Data="F1 M 19,38L 57,38L 57,44L 19,44L 19,38 Z "
-                                          Fill="{DynamicResource GrayBrush1}"
+                                          Fill="Black"
                                           Stretch="Fill" />
                                 </RepeatButton>
                             </StackPanel>
