--- a/SCME.UI/PagesUser/UserWorkModePage.xaml
+++ b/SCME.UI/PagesUser/UserWorkModePage.xaml
@@ -10,9 +10,13 @@
         mc:Ignorable="d" d:DesignWidth="1280" d:DesignHeight="944"
         x:Name="userWorkModePage" DataContext="{Binding RelativeSource={RelativeSource Self}, Path=VM}"
         Title="{x:Static res:Resources.LoginPage_Title}" >
-
+    
     <Page.Resources>
-
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/SCME.WpfControlLibrary;component/Styles/Controls.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        
         <Style TargetType="{x:Type Label}" BasedOn="{StaticResource CLabelStyle}">
             <Setter Property="Foreground" Value="{StaticResource xWhite1}" />
             <Setter Property="Margin" Value="10" />
@@ -54,6 +58,7 @@
         </Style>
 
         <ui:TryBooleanToVisibilityConverter x:Key="B2V" />
+        </ResourceDictionary>
     </Page.Resources>
 
     <Grid>
@@ -78,27 +83,27 @@
         <Button x:Name="OperatorButton" CommandParameter="{x:Static types:UserWorkMode.Operator}" Grid.Column="2" Grid.Row="1" Height="160" IsEnabled="{Binding ButtonsModeIsEnabled}" Click="SelectMode_Click">
             <Grid Background="{StaticResource xGreen1}">
                 <Path Data="{StaticResource LoginPath}" />
-                <Label Content="{x:Static res:Resources.OperatorMode}" />
+                <Label Content="{x:Static res:Resources.OperatorMode}" Style="{StaticResource LabelIconButton}" />
             </Grid>
         </Button>
 
         <Button x:Name="ServiceManButton" CommandParameter="{x:Static types:UserWorkMode.ServiceMan}" Grid.Column="2" Grid.Row="3" Height="160" IsEnabled="{Binding ButtonsModeIsEnabled}" Click="SelectMode_Click">
             <Grid Background="{StaticResource xBlue3}">
                 <Path Data="{StaticResource TechPath}" />
-                <Label Content="{x:Static res:Resources.ServicemanMode}" />
+                <Label Content="{x:Static res:Resources.ServicemanMode}" Style="{StaticResource LabelIconButton}" />
             </Grid>
         </Button>
 
         <Button x:Name="OperatorBuildModeButton" Visibility="{Binding Source={x:Static res:Settings.Default}, Path = OperatorBuildModeIsEnabled, Converter={StaticResource B2V}}" CommandParameter="{x:Static types:UserWorkMode.OperatorBuildMode}" Grid.Column="2" Grid.Row="5" Height="160" IsEnabled="{Binding ButtonsModeIsEnabled}" Click="SelectMode_Click">
             <Grid Background="{StaticResource xGreen1}">
-                <Label Content="{x:Static res:Resources.OperatorBuildMode}" />
+                <Label Content="{x:Static res:Resources.OperatorBuildMode}" Style="{StaticResource LabelIconButton}"  />
             </Grid>
         </Button>
 
         <Button x:Name="SpecialMeasureButton" Visibility="{Binding SpecialMeasureVisibility}" CommandParameter="{x:Static types:UserWorkMode.SpecialMeasure}" Grid.Column="0" Grid.Row="5" Height="160" IsEnabled="{Binding ButtonsModeIsEnabled}" Click="SelectMode_Click">
             <Grid Background="{StaticResource xRed2}">
                 <Path Data="{StaticResource SpecialMeasurePath}" />
-                <Label Content="{x:Static res:Resources.SpecialMeasureMode}" />
+                <Label Content="{x:Static res:Resources.SpecialMeasureMode}" Style="{StaticResource LabelIconButton}"  />
             </Grid>
         </Button>
 
