--- a/SCME.WpfControlLibrary/CustomControls/ProfilesPageComponents/AddTestParameterUserControl.xaml
+++ b/SCME.WpfControlLibrary/CustomControls/ProfilesPageComponents/AddTestParameterUserControl.xaml
@@ -39,20 +39,25 @@
             <Label Grid.Column="2" Grid.Row="0" Content="{x:Static res:Resources.Force}" />
             <customControl:NumericUpDown Grid.Column="3" Grid.Row="0" Value="{Binding ParameterClamp}" />
 
-            <Label Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.ParameterType}"/>
-            <ComboBox Grid.Column="1" Grid.Row="1" 
+            <Label Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.ParameterType}" 
+                   Visibility="{Binding IsReadOnly, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=UserControl}, Converter={StaticResource B2VI}}"/>
+            <ComboBox Grid.Column="1" Grid.Row="1" Visibility="{Binding IsReadOnly, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=UserControl}, Converter={StaticResource B2VI}}"
                       ItemsSource="{Binding Source={StaticResource TestParametersTypes}}" 
                       DisplayMemberPath="Key" SelectedValuePath="Value" 
                       SelectedValue="{Binding Path=ProfileVm.SelectedTestParametersType, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type pages:ProfilesPage}}}">
             </ComboBox>
-            <Button Grid.Column="2" Grid.Row="1" Grid.ColumnSpan="2" Style="{StaticResource PrimaryButton}" Content="{x:Static res:Resources.Add}" Click="AddTestParameters_Click"/>
+            <Button Grid.Column="2" Grid.Row="1" Grid.ColumnSpan="2" Style="{StaticResource PrimaryButton}" Content="{x:Static res:Resources.Add}" Click="AddTestParameters_Click"
+                    Visibility="{Binding IsReadOnly, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=UserControl}, Converter={StaticResource B2VI}}"/>
             
-            <CheckBox Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" IsChecked="{Binding IsHeightMeasureEnabled}" Content="{x:Static res:Resources.MeasureDialog_Title}" />
+            <Label Grid.Column="0" Grid.Row="2" Content="{x:Static res:Resources.Height_Prof}"  />
+            <customControl:NumericUpDown Grid.Column="1" Grid.Row="2" Value="{Binding Height}"  />
+            
             <Label Grid.Column="2" Grid.Row="2" Content="{x:Static res:Resources.Temp}" />
             <customControl:NumericUpDown Grid.Column="3" Grid.Row="2" Value="{Binding Temperature}"/>
             
-            <Label Grid.Column="0" Grid.Row="3" Content="{x:Static res:Resources.Height_Prof}" Visibility="{Binding IsHeightMeasureEnabled, Converter={StaticResource B2V}}" />
-            <customControl:NumericUpDown Grid.Column="1" Grid.Row="3" Value="{Binding Height}" Visibility="{Binding IsHeightMeasureEnabled, Converter={StaticResource B2V}}" />
+            <CheckBox Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2" IsChecked="{Binding IsHeightMeasureEnabled}" Content="{x:Static res:Resources.MeasureDialog_Title}" 
+                      Visibility="{Binding IsReadOnly, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=UserControl}, Converter={StaticResource B2VI}}"/>
+            
         </Grid>
     </Grid>
 </UserControl>
