--- a/SCME.WpfControlLibrary/Pages/ProfilesPage.xaml
+++ b/SCME.WpfControlLibrary/Pages/ProfilesPage.xaml
@@ -11,7 +11,7 @@
       xmlns:customControls="clr-namespace:SCME.WpfControlLibrary.CustomControls"
       xmlns:pages="clr-namespace:SCME.WpfControlLibrary.Pages"
       DataContext="{Binding RelativeSource={RelativeSource Self}, Path=ProfileVm}"
-      mc:Ignorable="d" Loaded="Page_Loaded"
+      mc:Ignorable="d" Loaded="Page_Loaded" Name="MainPage"
       d:DesignHeight="1024" d:DesignWidth="1280"
       Title="ProfilesPage">
     <Page.Resources>
@@ -34,8 +34,10 @@
                 <RowDefinition Height="1*" />
                 <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
-            <ComboBox Grid.Column="0" Grid.Row="0" SelectedValue="{Binding SelectedMmeCode}" SelectedValuePath="Key" DisplayMemberPath="Key" ItemsSource="{Binding MmeCodes}" SelectionChanged="ComboBox_SelectionChanged" />
-            <Button Grid.Column="0" Grid.Row="1" Style="{StaticResource PrimaryButton}" IsEnabled="{Binding IsEditModeInActive}" Content="{x:Static res:Resources.Add}" Click="CreateNewProfile_Click" Background="{StaticResource PurpleBrush1}" />
+            <ComboBox Grid.Column="0" Grid.Row="0" SelectedValue="{Binding SelectedMmeCode}" SelectedValuePath="Key" DisplayMemberPath="Key" ItemsSource="{Binding MmeCodes}" SelectionChanged="ComboBox_SelectionChanged"
+                      Visibility="{Binding IsSingleMmeCode, Converter={StaticResource B2VI}}"/>
+            <Button Grid.Column="0" Grid.Row="1" Style="{StaticResource PrimaryButton}" IsEnabled="{Binding IsEditModeInActive}" Content="{x:Static res:Resources.Add}" Click="CreateNewProfile_Click"
+                    Background="{StaticResource PurpleBrush1}" />
             <TextBox Grid.Column="0" Grid.Row="2" Text="{Binding SearchingName, UpdateSourceTrigger=PropertyChanged}" TextChanged="TextBoxFind_TextChanged" />
             <TreeView Grid.Column="0" Grid.Row="3" Name="ProfilesTreeView" ItemsSource="{Binding Profiles}" SelectedItemChanged="ProfilesTreeView_SelectedItemChanged" ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                       VirtualizingStackPanel.IsVirtualizing="True" VirtualizingStackPanel.VirtualizationMode="Recycling"
@@ -55,8 +57,9 @@
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="1*" />
+                <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
-            <Grid Grid.Column="0" Grid.Row="0">
+            <Grid Grid.Column="0" Grid.Row="0" Visibility="{Binding ReadOnlyMode, Converter={StaticResource B2VI}}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="Auto" />
@@ -74,18 +77,48 @@
                     <iconPacks:PackIconMaterial Kind="ContentSave" />
                 </Button>
             </Grid>
-            <Grid Grid.Column="0" Grid.Row="1" IsEnabled="{Binding IsEditModeActive}">
-                <profilesPageComponents:AddTestParameterUserControl DataContext="{Binding ProfileDeepDataCopy}" AddTestParametersEvent="AddTestParametersEvent_Click" />
+            <Grid Grid.Column="0" Grid.Row="1" Background="{StaticResource ListViewTestParametersBrush}" Visibility="{Binding IsClampingCommutationActive, Converter={StaticResource B2V}}">
+                <StackPanel>
+                    <Border IsEnabled="{Binding IsEditModeActive}" BorderThickness="1" Background="{StaticResource PurpleBrush2}" BorderBrush="AliceBlue" Margin="10">
+                        <profilesPageComponents:AddTestParameterUserControl x:Name="AddTestParameterUserControl" Margin="10" DataContext="{Binding ProfileDeepDataCopy}" AddTestParametersEvent="AddTestParametersEvent_Click" />
+                    </Border>
+                    <Border BorderThickness="1" Background="{StaticResource PurpleBrush2}" BorderBrush="AliceBlue" Margin="10"
+                            Visibility="{Binding ProfileVm.ReadOnlyMode, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Page}, Converter={StaticResource B2V}}">
+                        <CheckBox Margin="10" DataContext="{Binding ProfileDeepDataCopy}" IsChecked="{Binding IsHeightMeasureEnabled}" Content="{x:Static res:Resources.MeasureDialog_Title}" />
+                    </Border>
+                </StackPanel>
             </Grid>
-            <Grid Grid.Column="0" Grid.Row="2">
-                <testParameters:ClampCommutationDataTemplate IsEnabled="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=pages:ProfilesPage}, Path=ProfileVm.IsEditModeActive }"
-                                                             Visibility="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=pages:ProfilesPage}, Path=ProfileVm.IsClampingCommutationActive, Converter={StaticResource B2V}}"
-                                                             DataContext="{Binding ProfileDeepDataCopy}" />
-            </Grid>
+            <!-- <Grid Grid.Column="0" Grid.Row="1" Background="{StaticResource ListViewTestParametersBrush}"  Visibility="{Binding ShowHeightMeasure, Converter={StaticResource B2V}}"> -->
+            <!--     <Border BorderThickness="1" Background="{StaticResource PurpleBrush2}" BorderBrush="AliceBlue" Margin="10"> -->
+            <!--         <Grid> -->
+            <!--             <Grid.ColumnDefinitions> -->
+            <!--                 <ColumnDefinition Width="Auto"/> -->
+            <!--                 <ColumnDefinition Width="1*"/> -->
+            <!--             </Grid.ColumnDefinitions> -->
+            <!--             <Grid.RowDefinitions> -->
+            <!--                 <RowDefinition Height="Auto"/> -->
+            <!--                 <RowDefinition Height="Auto"/> -->
+            <!--                 <RowDefinition Height="Auto"/> -->
+            <!--             </Grid.RowDefinitions> -->
+            <!--             <Label Grid.Column="0" Grid.Row="0"  Content="{x:Static res:Resources.CommutationTypeT}"/> -->
+            <!--             <Label Grid.Column="0" Grid.Row="0"  Content="{x:Static res:Resources.CommutationTypeT}"/> -->
+            <!--             <CheckBox IsChecked="{Binding ProfileDeepDataCopy.IsHeightMeasureEnabled}" Margin="20"  Content="{x:Static res:Resources.MeasureDialog_Title}" /> -->
+            <!--         </Grid> -->
+            <!--     </Border> -->
+            <!--      -->
+            <!-- </Grid> -->
+            <!-- <Grid Grid.Column="0" Grid.Row="2"> -->
+            <!--     <testParameters:ClampCommutationDataTemplate IsEnabled="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=pages:ProfilesPage}, Path=ProfileVm.IsEditModeActive }" -->
+            <!--                                                  Visibility="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=pages:ProfilesPage}, Path=ProfileVm.IsClampingCommutationActive, Converter={StaticResource B2V}}" -->
+            <!--                                                  DataContext="{Binding ProfileDeepDataCopy}" /> -->
+            <!-- </Grid> -->
             <Grid Grid.Column="0" Grid.Row="3">
                 <profilesPageComponents:ListViewTestParametersUserControl ContentIsEnabled="{Binding IsEditModeActive}" ItemSource="{Binding ProfileDeepDataCopy.TestParametersAndNormatives}"
-                                                                          VirtualizingStackPanel.IsVirtualizing="True" VirtualizingStackPanel.ScrollUnit="Pixel"/>
+                                                                          VirtualizingStackPanel.IsVirtualizing="True" VirtualizingStackPanel.ScrollUnit="Pixel" />
             </Grid>
+
+            <Button Grid.Column="0" Grid.Row="4" Style="{StaticResource BackButton}" Content="{x:Static res:Resources.Next}" Visibility="{Binding ButtonNextIsVisible, Converter={StaticResource B2V}}" Command="{Binding ButtonNextRelayCommand}" />
+
         </Grid>
     </Grid>
 </Page>
