--- a/SCME.WpfControlLibrary/Styles/CheckBox.xaml
+++ b/SCME.WpfControlLibrary/Styles/CheckBox.xaml
@@ -2,6 +2,11 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls">
 
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Sizes.xaml" />
+        <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Common.xaml" />
+    </ResourceDictionary.MergedDictionaries>
+    
     <!--  ********************************** CheckBoxStyle **********************************  -->
     <!--  adapted from http://brianlagunas.com/free-metro-light-and-dark-themes-for-wpf-and-silverlight-microsoft-controls/  -->
     <Style TargetType="CheckBox">
@@ -37,7 +42,7 @@
                                   Width="{DynamicResource SCME.CheckBoxPathWidth}"
                                   Height="{DynamicResource SCME.CheckBoxPathHeight}"
                                   Data="M 1145.607177734375,430 C1145.607177734375,430 1141.449951171875,435.0772705078125 1141.449951171875,435.0772705078125 1141.449951171875,435.0772705078125 1139.232177734375,433.0999755859375 1139.232177734375,433.0999755859375 1139.232177734375,433.0999755859375 1138,434.5538330078125 1138,434.5538330078125 1138,434.5538330078125 1141.482177734375,438 1141.482177734375,438 1141.482177734375,438 1141.96875,437.9375 1141.96875,437.9375 1141.96875,437.9375 1147,431.34619140625 1147,431.34619140625 1147,431.34619140625 1145.607177734375,430 1145.607177734375,430 z"
-                                  Fill="{DynamicResource HighlightBrush}"
+                                  Fill="Blue"
                                   Opacity="0"
                                   Stretch="Fill"
                                   UseLayoutRounding="False" />
