--- a/SCME.WpfControlLibrary/Styles/Colors.xaml
+++ b/SCME.WpfControlLibrary/Styles/Colors.xaml
@@ -3,6 +3,7 @@
     
     <Color x:Key="Purple1">#FF8C0095</Color>
     <Color x:Key="Purple2">#FF9F40DE</Color>
+    <Color x:Key="Purple3">#FFB100BA</Color>
     
     <Color x:Key="Blue1">#FF00A7FF</Color>
     
@@ -13,9 +14,11 @@
     <SolidColorBrush x:Key="xGray2"         Color="#EDEDED"/>
     <SolidColorBrush x:Key="xGray3"         Color="#E6E6E6"/>
     <SolidColorBrush x:Key="xGray4"         Color="#BCBEC4"/>
+    <SolidColorBrush x:Key="GrayWhite"         Color="LightGray"/>
     
     <SolidColorBrush x:Key="PurpleBrush1" Color="{StaticResource Purple1}" ></SolidColorBrush>
     <SolidColorBrush x:Key="PurpleBrush2" Color="{StaticResource Purple2}" ></SolidColorBrush>
+    <SolidColorBrush x:Key="PurpleBrush3" Color="{StaticResource Purple3}" ></SolidColorBrush>
     
     <SolidColorBrush x:Key="ListViewTestParametersBrush" Color="{StaticResource Purple1}" ></SolidColorBrush>
     <SolidColorBrush x:Key="ListViewItemTestParametersBrush" Color="{StaticResource Purple2}" ></SolidColorBrush>
