--- a/SCME.WpfControlLibrary/DataTemplates/ProfileHierarchicalDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/ProfileHierarchicalDataTemplate.xaml
@@ -21,10 +21,10 @@
             <ColumnDefinition Width="10*" />
             <ColumnDefinition Width="0" />
         </Grid.ColumnDefinitions>
-        <Path Grid.Column="0" Grid.Row="0" Stretch="Fill" Fill="{StaticResource PurpleBrush1}" Data="M 0,0 L 10,0 L 10,10 L 0,10 L 10,5"/>
-        <Path Grid.Column="1" Grid.Row="0" Stretch="Fill" Fill="{StaticResource PurpleBrush1}" Data="M 0,0 L 100,0 L 102.5, 5 L 100,10 L 0,10"/>
-        <Path Grid.Column="2" Grid.Row="0" Stretch="Fill" Fill="{StaticResource PurpleBrush1}" Data="M 0,0 L 10,5 L 0,10"/>
-        <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding Name}" HorizontalAlignment="Stretch" />
+        <Path Grid.Column="0" Grid.Row="0" Stretch="Fill" Fill="{StaticResource PurpleBrush3}" Data="M 0,0 L 10,0 L 10,10 L 0,10 L 10,5"/>
+        <Path Grid.Column="1" Grid.Row="0" Stretch="Fill" Fill="{StaticResource PurpleBrush3}" Data="M 0,0 L 100,0 L 102.5, 5 L 100,10 L 0,10"/>
+        <Path Grid.Column="2" Grid.Row="0" Stretch="Fill" Fill="{StaticResource PurpleBrush3}" Data="M 0,0 L 10,5 L 0,10"/>
+        <TextBlock Grid.Column="1" Grid.Row="0" Margin="10,5,0,5" Text="{Binding Name}" HorizontalAlignment="Stretch" />
         <!-- Data="0,0 190,0 200,10 190,20 0,20" -->
         <!-- <TextBlock Grid.Column="3" Grid.Row="0" Text="{Binding Version}" Margin="{DynamicResource SCME.MarginLeftTreeViewItemDataProfile}" /> -->
         <!-- <TextBlock Grid.Column="4" Grid.Row="0" Text="{Binding Timestamp, StringFormat=hh:mm:ss dd-MM-yyyy}" TextWrapping="Wrap" Margin="{DynamicResource SCME.MarginLeftTreeViewItemDataProfile}" HorizontalAlignment="Right" /> -->
