--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/GateDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/GateDataTemplate.xaml
@@ -10,9 +10,9 @@
              d:DesignHeight="450" d:DesignWidth="800">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto" SharedSizeGroup="Column0"/>
-            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="auto" SharedSizeGroup="Column13"/>
             <ColumnDefinition Width="auto" SharedSizeGroup="Column2"/>
-            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="auto" SharedSizeGroup="Column13"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
@@ -30,12 +30,14 @@
 
         <Label Grid.Column="0" Grid.Row="2" Content="{x:Static res:Resources.MaxResistance_Ohm}" />
         <customControls:NumericUpDown Grid.Column="1" Grid.Row="2" Value="{Binding Resistance}" />
+        <Label Grid.Column="2" Grid.Row="2" Content="{x:Static res:Resources.MaxVgt_V}" />
+        <customControls:NumericUpDown Grid.Column="3" Grid.Row="2" Value="{Binding VGT }" />
 
-        <Label Grid.Column="0" Grid.Row="3" Content="{x:Static res:Resources.MaxIgt_mA}" />
-        <customControls:NumericUpDown Grid.Column="1" Grid.Row="3" Value="{Binding IGT}"/>
-        <Label Grid.Column="2" Grid.Row="3" Content="{x:Static res:Resources.MaxVgt_V}" />
-        <customControls:NumericUpDown Grid.Column="3" Grid.Row="3" Value="{Binding VGT }" />
-
+        <Label Grid.Column="0" Grid.Row="3" Content="{x:Static res:Resources.MinIgt_mA}" />
+        <customControls:NumericUpDown Grid.Column="1" Grid.Row="3" Value="{Binding MinIGT}"/>
+        <Label Grid.Column="2" Grid.Row="3" Content="{x:Static res:Resources.MaxIgt_mA}" />
+        <customControls:NumericUpDown Grid.Column="3" Grid.Row="3" Value="{Binding IGT}"/>
+        
         <Label Grid.Column="0" Grid.Row="4" Content="{x:Static res:Resources.MaxIh_mA}" />
         <customControls:NumericUpDown Grid.Column="1" Grid.Row="4" Value="{Binding IH }" />
         <Label Grid.Column="2" Grid.Row="4" Content="{x:Static res:Resources.MaxIl_mA}" />
