--- a/SCME.WpfControlLibrary/Pages/ProfilesPage.xaml
+++ b/SCME.WpfControlLibrary/Pages/ProfilesPage.xaml
@@ -13,7 +13,7 @@
       DataContext="{Binding RelativeSource={RelativeSource Self}, Path=ProfileVm}"
       mc:Ignorable="d" Loaded="Page_Loaded" Name="MainPage"
       d:DesignHeight="1024" d:DesignWidth="1280"
-      Title="ProfilesPage">
+      Title="{x:Static res:Resources.Profiles}">
     <Page.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -42,12 +42,13 @@
             <TreeView Grid.Column="0" Grid.Row="3" Name="ProfilesTreeView" ItemsSource="{Binding Profiles}" SelectedItemChanged="ProfilesTreeView_SelectedItemChanged" ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                       VirtualizingStackPanel.IsVirtualizing="True" VirtualizingStackPanel.VirtualizationMode="Recycling"
                       VirtualizingStackPanel.CacheLength="1" VirtualizingStackPanel.CacheLengthUnit="Page"
-                      VirtualizingStackPanel.ScrollUnit="Item">
+                      VirtualizingStackPanel.ScrollUnit="Item" >
                 <TreeView.ItemTemplate>
-                    <HierarchicalDataTemplate ItemsSource="{Binding Path=Children}">
-                        <dataTemplate:ProfileHierarchicalDataTemplate Margin="0" Padding="0" />
+                    <HierarchicalDataTemplate>
+                        <dataTemplate:ProfileHierarchicalDataTemplate/>
                     </HierarchicalDataTemplate>
                 </TreeView.ItemTemplate>
+                
             </TreeView>
             <Button Grid.Column="0" Grid.Row="4" Content="{x:Static res:Resources.Back}" Style="{StaticResource BackButton}" Click="GoBack_Click" />
         </Grid>
@@ -70,7 +71,7 @@
                 <Button Grid.Column="1" Grid.Row="0" IsEnabled="{Binding IsEditModeEnabled}" Click="BeginEditProfile_Click" Style="{StaticResource ButtonWithIcon}">
                     <iconPacks:PackIconMaterial Kind="Pencil" />
                 </Button>
-                <Button Grid.Column="2" Grid.Row="0" IsEnabled="{Binding IsEditModeActive}" Click="CancelEditProfile_Click" Style="{StaticResource ButtonWithIcon}">
+                <Button Grid.Column="2" Grid.Row="0" IsEnabled="{Binding IsEditModeActive}" Click="CancelEditProfile_Click" Style="{StaticResource ButtonWithIcon}" Margin="10,0,10,0">
                     <iconPacks:PackIconMaterial Kind="Cancel" />
                 </Button>
                 <Button Grid.Column="3" Grid.Row="0" IsEnabled="{Binding IsEditModeActive}" Click="EndEditProfile_Click" Style="{StaticResource ButtonWithIcon}">
