--- a/SCME.WpfControlLibrary/Styles/Button.xaml
+++ b/SCME.WpfControlLibrary/Styles/Button.xaml
@@ -17,6 +17,7 @@
         <Setter Property="FontSize" Value="{DynamicResource BaseFontSize}" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="HorizontalContentAlignment" Value="Center" />
+        <Setter Property="Height" Value="50" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
