--- a/SCME.WpfControlLibrary/Styles/CheckBox.xaml
+++ b/SCME.WpfControlLibrary/Styles/CheckBox.xaml
@@ -1,15 +1,18 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls">
+                    xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
+                    xmlns:system="clr-namespace:System;assembly=mscorlib">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Sizes.xaml" />
         <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Common.xaml" />
     </ResourceDictionary.MergedDictionaries>
     
+    
+
     <!--  ********************************** CheckBoxStyle **********************************  -->
     <!--  adapted from http://brianlagunas.com/free-metro-light-and-dark-themes-for-wpf-and-silverlight-microsoft-controls/  -->
-    <Style TargetType="CheckBox">
+    <Style TargetType="CheckBox" >
         <Setter Property="Background" Value="{DynamicResource WhiteBrush}" />
         <Setter Property="BorderBrush" Value="{DynamicResource CheckBoxBrush}" />
         <Setter Property="BorderThickness" Value="1" />
@@ -19,8 +22,8 @@
         <Setter Property="FontSize" Value="{DynamicResource SCME.BaseFontSize}" />
         <Setter Property="Foreground" Value="{DynamicResource LabelTextBrush}" />
         <Setter Property="HorizontalContentAlignment" Value="Left" />
-        <Setter Property="Padding" Value="6 0 0 0" />
         <Setter Property="SnapsToDevicePixels" Value="True" />
+        
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="CheckBox">
@@ -29,33 +32,30 @@
                             <ColumnDefinition x:Name="LeftCol" Width="auto" />
                             <ColumnDefinition x:Name="RightCol" Width="*" />
                         </Grid.ColumnDefinitions>
-                        <Grid x:Name="PART_CHECKBOX">
-                            <Rectangle Margin="-6 0" Fill="{DynamicResource TransparentWhiteBrush}" />
+                        <Grid x:Name="PART_CHECKBOX" Grid.Column="0">
+                            <!--<Rectangle Fill="{DynamicResource TransparentWhiteBrush}" />-->
                             <Border x:Name="normal"
-                                    Width="{DynamicResource SCME.CheckBoxBorderSize}"
-                                    Height="{DynamicResource SCME.CheckBoxBorderSize}"
+                                    Width="{DynamicResource SCME.RepeatButtonUpDownSize}"
+                                    Height="{DynamicResource SCME.RepeatButtonUpDownSize}"
                                     Background="{TemplateBinding Background}"
                                     BorderBrush="{TemplateBinding BorderBrush}"
                                     BorderThickness="{TemplateBinding BorderThickness}"
                                     SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
-                            <Path x:Name="checkBox"
-                                  Width="{DynamicResource SCME.CheckBoxPathWidth}"
-                                  Height="{DynamicResource SCME.CheckBoxPathHeight}"
+                            <Path x:Name="checkBox" FlowDirection="LeftToRight"
+                                  Width="{DynamicResource SCME.RepeatButtonUpDownSize}"
+                                  Height="{DynamicResource SCME.RepeatButtonUpDownSize}"
                                   Data="M 1145.607177734375,430 C1145.607177734375,430 1141.449951171875,435.0772705078125 1141.449951171875,435.0772705078125 1141.449951171875,435.0772705078125 1139.232177734375,433.0999755859375 1139.232177734375,433.0999755859375 1139.232177734375,433.0999755859375 1138,434.5538330078125 1138,434.5538330078125 1138,434.5538330078125 1141.482177734375,438 1141.482177734375,438 1141.482177734375,438 1141.96875,437.9375 1141.96875,437.9375 1141.96875,437.9375 1147,431.34619140625 1147,431.34619140625 1147,431.34619140625 1145.607177734375,430 1145.607177734375,430 z"
                                   Fill="Blue"
                                   Opacity="0"
-                                  Stretch="Fill"
+                                  Stretch="Uniform"
                                   UseLayoutRounding="False" />
-                            <Rectangle x:Name="IndeterminateCheck"
-                                       Width="8"
-                                       Height="3"
+                            <!--Rectangle x:Name="IndeterminateCheck"
+                                       
                                        Fill="{DynamicResource GrayBrush3}"
-                                       Opacity="0" />
+                                       Opacity="0" />-->
                         </Grid>
                         <ContentPresenter x:Name="contentPresenter"
                                           Grid.Column="1"
-                                          Margin="{TemplateBinding Padding}"
-                                          HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                                           VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
                                           Content="{TemplateBinding Content}"
                                           ContentStringFormat="{TemplateBinding ContentStringFormat}"
@@ -97,23 +97,13 @@
                         <Trigger Property="IsFocused" Value="True">
                             <Setter TargetName="normal" Property="BorderBrush" Value="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(controls:ControlsHelper.FocusBorderBrush)}" />
                         </Trigger>
-                        <Trigger Property="FlowDirection" Value="RightToLeft">
-                            <Setter TargetName="checkBox" Property="LayoutTransform">
-                                <Setter.Value>
-                                    <ScaleTransform ScaleX="-1" />
-                                </Setter.Value>
-                            </Setter>
-                        </Trigger>
                         <Trigger Property="IsEnabled" Value="False">
                             <Setter Property="Background" Value="Transparent"/>
                             <Setter TargetName="normal" Property="Visibility" Value="Hidden"/>
                         </Trigger>
-                        <Trigger Property="controls:ToggleButtonHelper.ContentDirection" Value="RightToLeft">
-                            <Setter Property="Padding" Value="0 0 6 0" />
-                            <Setter TargetName="LeftCol" Property="Width" Value="*" />
-                            <Setter TargetName="PART_CHECKBOX" Property="Grid.Column" Value="1" />
-                            <Setter TargetName="RightCol" Property="Width" Value="18" />
-                            <Setter TargetName="contentPresenter" Property="Grid.Column" Value="0" />
+                        <Trigger Property="FlowDirection" Value="RightToLeft">
+                            <Setter TargetName="contentPresenter" Property="HorizontalAlignment" Value="Right"></Setter>
+                            <Setter TargetName="PART_CHECKBOX" Property="Margin" Value="0,0,5,0"></Setter>
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
@@ -121,4 +111,5 @@
         </Setter>
         <Setter Property="VerticalContentAlignment" Value="Center" />
     </Style>
+    
 </ResourceDictionary>
