--- a/SCME.WpfControlLibrary/Styles/ListViewItemTestParameter.xaml
+++ b/SCME.WpfControlLibrary/Styles/ListViewItemTestParameter.xaml
@@ -14,50 +14,59 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="ListViewItem">
-                        <Grid Margin="10" IsEnabled="{Binding Path=ContentIsEnabled, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=profilesPageComponents:ListViewTestParametersUserControl}}">
+                    <Grid Margin="10" IsEnabled="{Binding Path=ContentIsEnabled, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=profilesPageComponents:ListViewTestParametersUserControl}}">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        
+                        <Border Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" BorderThickness="1" Background="{StaticResource PurpleBrush2}" BorderBrush="AliceBlue" />
+
+                        <Grid Grid.Row="0" Margin="10">
                             <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
                             </Grid.RowDefinitions>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="auto" SharedSizeGroup="Column0" />
-                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="auto" SharedSizeGroup="Column13"/>
                                 <ColumnDefinition Width="auto" SharedSizeGroup="Column2" />
-                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="auto" SharedSizeGroup="Column13"/>
                             </Grid.ColumnDefinitions>
-                            <Border Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="4" Grid.RowSpan="2" BorderThickness="1" Background="{StaticResource PurpleBrush2}" BorderBrush="AliceBlue"/>
 
-                            <Label Grid.Column="0" Grid.Row="0" Content="{Binding Converter={StaticResource TP2S}}" />
-                            <CheckBox Grid.Column="2" Grid.Row="0" IsChecked="{Binding IsEnabled}" Content="{x:Static res:Resources.IsActive}" d:DataContext="{d:DesignInstance baseTestParametersAndNormatives:BaseTestParametersAndNormatives }" />
-                            <StackPanel Grid.Column="3" Grid.Row="0" Orientation="Horizontal">
-                            
-                                <Button Style="{StaticResource ButtonWithIcon}" 
+                            <Label  Grid.Column="0" Grid.Row="0" Content="{Binding Converter={StaticResource TP2S}}" />
+                            <CheckBox Grid.Column="1" Grid.Row="0" IsChecked="{Binding IsEnabled}" Content="{x:Static res:Resources.IsActive}" HorizontalAlignment="Right" FlowDirection="RightToLeft"
+                                      d:DataContext="{d:DesignInstance baseTestParametersAndNormatives:BaseTestParametersAndNormatives }" />
+                            <StackPanel Grid.Column="3" Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right" >
+
+                                <Button Style="{StaticResource ButtonWithIcon}"
                                         Visibility="{Binding Path=ContentIsEnabled, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=profilesPageComponents:ListViewTestParametersUserControl}, Converter={StaticResource B2V}}"
                                         Command="{Binding  RelativeSource ={RelativeSource Mode=FindAncestor, AncestorType=profilesPageComponents:ListViewTestParametersUserControl}, Path=MoveUp}"
                                         CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListViewItem}, Path=DataContext}">
                                     <iconPacks:PackIconMaterial Kind="ArrowUp" />
                                 </Button>
-                                <Button Style="{StaticResource ButtonWithIcon}" 
+                                <Button Style="{StaticResource ButtonWithIcon}" Margin="10,0,10,0"
                                         Visibility="{Binding Path=ContentIsEnabled, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=profilesPageComponents:ListViewTestParametersUserControl}, Converter={StaticResource B2V}}"
                                         Command="{Binding  RelativeSource ={RelativeSource Mode=FindAncestor, AncestorType=profilesPageComponents:ListViewTestParametersUserControl}, Path=MoveDown}"
                                         CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListViewItem}, Path=DataContext}">
                                     <iconPacks:PackIconMaterial Kind="ArrowDown" />
                                 </Button>
-                                
-                                <Button Style="{StaticResource ButtonWithIcon}" HorizontalAlignment="Right" 
+
+                                <Button Style="{StaticResource ButtonWithIcon}" HorizontalAlignment="Right"
                                         Visibility="{Binding Path=ContentIsEnabled, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=profilesPageComponents:ListViewTestParametersUserControl}, Converter={StaticResource B2V}}"
                                         Command="{Binding  RelativeSource ={RelativeSource Mode=FindAncestor, AncestorType=profilesPageComponents:ListViewTestParametersUserControl}, Path=DeleteRelayCommand}"
                                         CommandParameter="{Binding RelativeSource={RelativeSource Self}, Path=DataContext}">
                                     <iconPacks:PackIconMaterial Kind="Delete" />
                                 </Button>
                             </StackPanel>
-                            
-                            
-                            
-                            
-                            <ContentPresenter Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="4" Margin="10" DataContext="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListViewItem}, Path=DataContext}" />
 
                         </Grid>
+
+                        <ContentPresenter Grid.Column="0" Grid.Row="1" Margin="10" DataContext="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListViewItem}, Path=DataContext}" />
+
+                        
+                        
+                    </Grid>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
